--- a/views/client/forms/add.hbs
+++ b/views/client/forms/add.hbs
@@ -5,7 +5,7 @@
       E-mail
     </p>
     <p>
-      <input type="email" name="mail">
+      <input type="email" name="mail" required>
     </p>
   </label>
   <label>
