Rewrite back-end to Typescript

--- a/views/client/list-all.hbs
+++ b/views/client/list-all.hbs
@@ -15,7 +15,7 @@
     </tr>
   </thead>
   <tbody>
-    {{#each clients}}
+    {{#each allClients}}
       <tr>
         <th>
           <a href="mailto: {{this.mail}}" target="_blank">{{this.mail}}</a>
